--- a/src/components/FloatingWhatsApp/styles.module.css
+++ b/src/components/FloatingWhatsApp/styles.module.css
@@ -1,6 +1,6 @@
 .bounce_out_bottom {
-    -webkit-animation: bounce_out_bottom 5s ease-in-out infinite alternate both;
-    animation: bounce_out_bottom 5s ease-in-out infinite alternate both;
+    -webkit-animation: bounce_out_bottom 7s ease-in-out infinite both;
+    animation: bounce_out_bottom 7s ease-in-out infinite both;
 }
 
 
@@ -19,107 +19,71 @@
  */
 
 @-webkit-keyframes bounce_out_bottom {
-    0% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
+    from {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-transform-origin: center center;
+        transform-origin: center center;
         -webkit-animation-timing-function: ease-out;
         animation-timing-function: ease-out;
     }
-    5% {
-        -webkit-transform: translateY(30px);
-        transform: translateY(30px);
+    10% {
+        -webkit-transform: scale(0.91);
+        transform: scale(0.91);
         -webkit-animation-timing-function: ease-in;
         animation-timing-function: ease-in;
     }
-    15% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
+    17% {
+        -webkit-transform: scale(0.98);
+        transform: scale(0.98);
         -webkit-animation-timing-function: ease-out;
         animation-timing-function: ease-out;
     }
-    25% {
-        -webkit-transform: translateY(38px);
-        transform: translateY(38px);
+    33% {
+        -webkit-transform: scale(0.87);
+        transform: scale(0.87);
         -webkit-animation-timing-function: ease-in;
         animation-timing-function: ease-in;
     }
-    38% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
+    45% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
         -webkit-animation-timing-function: ease-out;
         animation-timing-function: ease-out;
-    }
-    52% {
-        -webkit-transform: translateY(75px);
-        transform: translateY(75px);
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-    }
-    70% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        -webkit-animation-timing-function: ease-out;
-        animation-timing-function: ease-out;
-    }
-    85% {
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: translateY(800px);
-        transform: translateY(800px);
-        opacity: 0;
     }
 }
 
 @keyframes bounce_out_bottom {
-    0% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
+    from {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-transform-origin: center center;
+        transform-origin: center center;
         -webkit-animation-timing-function: ease-out;
         animation-timing-function: ease-out;
     }
-    5% {
-        -webkit-transform: translateY(30px);
-        transform: translateY(30px);
+    10% {
+        -webkit-transform: scale(0.91);
+        transform: scale(0.91);
         -webkit-animation-timing-function: ease-in;
         animation-timing-function: ease-in;
     }
-    15% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
+    17% {
+        -webkit-transform: scale(0.98);
+        transform: scale(0.98);
         -webkit-animation-timing-function: ease-out;
         animation-timing-function: ease-out;
     }
-    25% {
-        -webkit-transform: translateY(38px);
-        transform: translateY(38px);
+    33% {
+        -webkit-transform: scale(0.87);
+        transform: scale(0.87);
         -webkit-animation-timing-function: ease-in;
         animation-timing-function: ease-in;
     }
-    38% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
+    45% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
         -webkit-animation-timing-function: ease-out;
         animation-timing-function: ease-out;
-    }
-    52% {
-        -webkit-transform: translateY(75px);
-        transform: translateY(75px);
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-    }
-    70% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        -webkit-animation-timing-function: ease-out;
-        animation-timing-function: ease-out;
-    }
-    85% {
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: translateY(800px);
-        transform: translateY(800px);
-        opacity: 0;
     }
 }
